updated swagger comments
